--- a/package.json
+++ b/package.json
@@ -16,14 +16,21 @@
   "type": "commonjs",
   "dependencies": {
     "@anthropic-ai/sdk": "^0.72.1",
+    "@fastify/cors": "^11.2.0",
     "@fastify/formbody": "^8.0.2",
+    "@fastify/jwt": "^10.0.0",
+    "@fastify/static": "^9.0.0",
     "@google/generative-ai": "^0.24.1",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
+    "@types/bcrypt": "^6.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
+    "bcrypt": "^6.0.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
     "fastify-plugin": "^5.1.0",
+    "jsonwebtoken": "^9.0.3",
     "openai": "^6.15.0",
     "pg": "^8.16.3",
     "telegraf": "^4.16.3"
