--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "openai": "^6.15.0",
     "pg": "^8.16.3",
     "telegraf": "^4.16.3",
-    "telegram": "^2.26.22"
+    "telegram": "^2.26.22",
+    "vk-io": "^4.10.1"
   },
   "devDependencies": {
     "@types/node": "^25.0.3",
